k8s/billing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing-app
  ports:
    - port: 80
      name: http
      targetPort: web
  type: ClusterIP
