k8s/billing/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: billing-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - http:
        paths:
          - path: /billing(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 80
  ingressClassName: nginx
